--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,11 +21,11 @@
           <img src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %}
 
-<!--         <p>{{ site.description | default: site.github.project_tagline }}</p> -->
+        <p>{{ site.description | default: site.github.project_tagline }}</p>
 
-        {% if site.github.is_project_page %}
+<!--         {% if site.github.is_project_page %}
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
-        {% endif %}
+        {% endif %} -->
 
         {% if site.show_ref_links %}
         <p class="view" style="text-align:center;font-size:14px"><a href="mailto: {{ site.email }}">Email</a> / <a href="{{ site.cvlocation }}">CV</a> / <a href="{{ site.scholar }}">Scholar</a> / <a href="{{ site.linkedin }}">LinkedIn</a> / <a href="{{ site.github.owner_url }}">GitHub</a></p>
