--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
         {% endif %} -->
 
         {% if site.show_ref_links %}
-        <p class="view" style="text-align:center;font-size:14px"><a href="mailto: {{ site.email }}">Email</a> / <a href="{{ site.cvlocation }}">CV</a> / <a href="{{ site.scholar }}">Scholar</a> / <a href="{{ site.linkedin }}">LinkedIn</a> / <a href="{{ site.github.owner_url }}">GitHub</a></p>
+        <p class="view" style="text-align:center;font-size:14px"><a href="mailto: {{ site.email }}"><i class="fa fa-envelope-square"></i></a> / <a href="{{ site.cvlocation }}">CV</a> / <a href="{{ site.scholar }}">Scholar</a> / <a href="{{ site.linkedin }}">LinkedIn</a> / <a href="{{ site.github.owner_url }}">GitHub</a></p>
         {% endif %}
 
         {% if site.show_downloads %}
